Fix: Park name not fitting on card display

--- a/mousepediadb/static/css/style.css
+++ b/mousepediadb/static/css/style.css
@@ -7,7 +7,7 @@
     font-weight: 900;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Colors*/
+/* -------------------------------------------------------------------------------------------------------------------------------- Colors*/
 /* -------------------------------------------- Body & Multiple page Colors*/
 
 /* gradient colour for background on all pages */
@@ -145,7 +145,7 @@ span.park-card-heading {
     color:#0d47a1;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Body */
+/* -------------------------------------------------------------------------------------------------------------------------------- Body */
 
 body {
     display: flex;
@@ -154,7 +154,7 @@ body {
     font-family: Englebert;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Header & Nav */
+/* -------------------------------------------------------------------------------------------------------------------------------- Header & Nav */
 
 main {
     flex: 1 0 auto;
@@ -181,7 +181,7 @@ main {
     font-weight: 600;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Home Page */
+/* -------------------------------------------------------------------------------------------------------------------------------- Home Page */
 
 .home-tagline {
     font-weight: 500;
@@ -210,14 +210,14 @@ main {
     margin: -2.1rem;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Parks Page */
+/* -------------------------------------------------------------------------------------------------------------------------------- Parks Page */
 
 .add-park-btn {
     margin: 2rem;
 }
 
 .park-card {
-    height: 32rem;
+    height: 30rem;
 }
 
 .card-image img {
@@ -226,12 +226,11 @@ main {
 
 .park-card .park-card-content {
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .park-card-heading {
     font-family: Graduate;
-    font-size: 2rem !important;
     font-weight: 700 !important;
 }
 
@@ -268,11 +267,7 @@ main {
     font-size: 3rem;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Add Parks Page */
-
-
-
-/* ---------------------------------------------------------------------------------------------------------- Rides Page */
+/* -------------------------------------------------------------------------------------------------------------------------------- Rides Page */
 
 .ride-icon {
     font-size: 3rem;
@@ -291,9 +286,7 @@ main {
     border: 2px solid black;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Add Rides Page */
-
-/* ---------------------------------------------------------------------------------------------------------- Restaurant */
+/* -------------------------------------------------------------------------------------------------------------------------------- Restaurant */
 
 .restaurant-information .card {
     margin-bottom: 2rem;
@@ -311,7 +304,7 @@ main {
     font-size: 1.5rem;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Add Restaurant Page */
+/* -------------------------------------------------------------------------------------------------------------------------------- Add Restaurant Page */
 
 .fa-burger {
     font-size: 2rem;
@@ -331,7 +324,7 @@ main {
     margin-right: 20px;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Flash Messages */
+/* -------------------------------------------------------------------------------------------------------------------------------- Flash Messages */
 
 .flash-message {
     display: flex;
@@ -341,7 +334,7 @@ main {
     justify-content: center;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Delete Record Modal */
+/* -------------------------------------------------------------------------------------------------------------------------------- Delete Record Modal */
 
 .delete-modal {
     height: 25rem;
@@ -362,7 +355,7 @@ main {
     flex-direction: column;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Forms */
+/* -------------------------------------------------------------------------------------------------------------------------------- Forms */
 
 .add_form {
     margin-top: 4rem;
@@ -387,7 +380,7 @@ label {
     font-weight: 800;
 }
 
-/* ---------------------------------------------------------------------------------------------------------- Footer */
+/* -------------------------------------------------------------------------------------------------------------------------------- Footer */
 
 .footer-heading {
     font-family: Graduate;
